# lumin

./: .gitignore  Cargo.toml  build.bat  daemon_log.txt  index.html  learning.md  project.md  readme.md  refactor.txt  stop.bat  style.css
client/: Cargo.toml  build.rs
client/resources/: tray-example.rc
client/src/: animations.rs  animations__.rs  app.rs  dvar_cache.rs  dvar_cache__.rs  dvars.rs  error.rs  id.rs  logger.rs  main.rs  monitor.rs  request.rs  threading.rs  tray.rs  ui.rs  utils.rs  ytdl.rs
client/src/app/: background.rs  mod.rs  state.rs
client/src/wallpaper/: content.rs  mod.rs  player.rs
client/src/window_manager/: mod.rs
client/src/window_manager/windows/: mod.rs  utils.rs
daemon/: Cargo.toml  daemon_log.txt
daemon/dead_code/: base.rs
daemon/src/: error.rs  main.rs  server.rs
daemon/src/wallpaper/: mod.rs  player.rs  utils.rs
daemon/src/window_manager/: mod.rs
daemon/src/window_manager/windows/: mod.rs  utils.rs
installer/: Cargo.toml  readme.md
installer/src/: main.rs
installer/src/models/: gh_releases.rs  mod.rs
scripts/: dependency_checker.py  position_windows.py  run.sh
shared/: Cargo.toml
shared/src/: background.rs  id.rs  lib.rs  logger.rs  monitor.rs  networking.rs  vars.rs
shared/src/daemon/: vars.rs
shared/src/error/: client.rs  daemon.rs
src/: main.rs
website/: index.html
workerw_fetcher/: Cargo.toml
workerw_fetcher/src/: main.rs
