[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "lumin_client"
path = "src/main.rs"

[dependencies]
eframe = "0.21.3"
log = "0.4.17"
shared = {path = "../shared"}
sysinfo = "0.28.4"
thiserror = "1.0.40"
