[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.17", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rfd = "0.11.3"
futures = "0.3.28"
indicatif = "0.17.3"
futures-util = "0.3.28"
tokio = { version = "1.28.0", features = ["macros"] }
