[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.30", default-features = false }
indicatif = "0.17.8"
reqwest = { version = "0.12.3", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
# reqwest = { version = "0.11.27", features = ["blocking", "json", "stream"] }
# serde = { version = "1.0.160", features = ["derive"] }
# futures = "0.3.28"
# indicatif = "0.17.3"
# futures-util = "0.3.28"
# tokio = { version = "1.28.0", features = ["macros"] }
