[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "shared"
crate-type = ["rlib"]

[[bin]]
path = "src/main.rs"
name = "lumin_shared_tests"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
fern = "0.6.2"
log = "0.4.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
